# DSPSeedDatabase

./: .gitignore  Cargo.toml  README.md  config.toml  create_database.py  insert.py  lookup_full_features.py  misc.py  parse_rule.py  planets.csv  profiler.py  pyproject.toml  requirements.txt  rules.py  stars.csv
server/: note.py  server.py
src/: lib.rs  main.rs
src/data/: enums.rs  game_desc.rs  star_planets.rs  theme_proto.rs  vein.rs
src/worldgen/: galaxy_gen.rs
