[package]
name = "dsp_seed_finder"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
debug = true

[profile.dev]
incremental = true
debug = true

[lib]
name = "dsp_generator"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }


[target.'cfg(not(target_arch = "python"))'.dependencies]
postgres =  { version = "0.19.13" }

[target.'cfg(target_arch = "python")'.dependencies]
pyo3 = { version = "0.28.2", features = ["full"]}
pythonize = "0.28.0"
